Development of 1.5.0 features completed